legacy_tests/fixtures/components/invalid-foldable/auth.blade.php
@blaze(fold: true)

<div>
    Welcome, {{ auth()->user()->name }}
</div>
